spoofax-workspace/My-Languages/CIVIC-definition/CIVIC-Tests/data/runs/run-20230622-222309/iteration-2-cpp/debug_cpp_2.log
2023-06-22 22:23:14,358 INFO Running C++ tests for iteration 2
2023-06-22 22:23:15,035 INFO Started container return code: 0, 70afffbaea9b6d914d3a3e05f69375589b0d6b855ae40c03fd8865c860f1a6c9
, 
2023-06-22 22:23:15,035 INFO Started: data/runs/run-20230622-222309/iteration-2-cpp/permutations_shared_computation.cpp, outfile: data/runs/run-20230622-222309/iteration-2-cpp/permutations_shared_computation_output_cpp-2.txt
2023-06-22 22:23:15,035 INFO Testing: data/runs/run-20230622-222309/iteration-2-cpp/permutations_shared_computation.cpp
2023-06-22 22:23:16,126 INFO Compile 1, /usr/src/myapp/permutations_shared_computation.cpp:43:1: error: ISO C++ forbids declaration of 'f0' with no type [-fpermissive]
   43 | f0() {}
      | ^~
/usr/src/myapp/permutations_shared_computation.cpp: In function 'int f0()':
/usr/src/myapp/permutations_shared_computation.cpp:43:7: warning: no return statement in function returning non-void [-Wreturn-type]
   43 | f0() {}
      |       ^
, 
2023-06-22 22:23:16,128 INFO Started running
2023-06-22 22:23:16,277 INFO Succes, /bin/bash: line 1: ./output: No such file or directory
